// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topbar should renders properly 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="far"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar showFilterButton when it is false should include Settings 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar showFilterButton when it is true should include Settings 1`] = `
<div
  className="topbar"
>
  <div />
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="far"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;

exports[`Topbar when there is children renders children with with-info modifier 1`] = `
<div
  className="topbar topbar--with-info"
>
  <div>
    <span>
      topbar
    </span>
  </div>
  <div
    className="topbar__options"
  >
    <button
      className="button button--secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-filter fa-w-16 "
        data-icon="filter"
        data-prefix="far"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Filtros
    </button>
    <div
      className="topbar__settings"
    >
      <img
        alt="Felino da Silva"
        className="topbar__avatar"
        onClick={[Function]}
        role="presentation"
        src="https://placekitten.com/32/32"
      />
    </div>
  </div>
</div>
`;
